Fix mobile horizontal scroll issue

--- a/css/style.css
+++ b/css/style.css
@@ -1075,7 +1075,7 @@ body {
   z-index: 999;
   position: absolute;
   display: block;
-  width: 100%;
+  width: 96%;
   height: 100%;
 }
 
